//
// Copyright 2019 DXOS.org
//

syntax = "proto3";

package dxos.protocol.replicator;

import "google/protobuf/any.proto";

message Container {
  string type = 1;
  repeated google.protobuf.Any data = 2;
}

message Feed {
  optional bytes key = 1;
  optional bytes discoveryKey = 2;
}
